--- a/lab1_OS_2/lab1_OS_2.vcxproj.filters
+++ b/lab1_OS_2/lab1_OS_2.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="lab1_OS_2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="copyFuncs.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="copyFuncs.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
