--- a/lab1_OS_2/lab1_OS_2.vcxproj
+++ b/lab1_OS_2/lab1_OS_2.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="copyFuncs.cpp" />
     <ClCompile Include="lab1_OS_2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="copyFuncs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
